modules/gdscript/tests/scripts/runtime/errors/global_class_2.notest.gd
class_name GlobalClass2 extends GlobalBase
